swagger configuration
